@@ -10,26 +10,26 @@ OBJ = $(BASE:=.o)
 TABIX_INC = ../third/tabix
 TABIX_LIB = ../third/tabix/libtabix.a
 $(TABIX_INC) $(TABIX_LIB):
-	(cd ../third; make tabix)
+	(cd ../third; $(MAKE) tabix)
 
 PCRE_INC = ../third/pcre/include
 $(PCRE_INC):
-	(cd ../third; make pcre)
+	(cd ../third; $(MAKE) pcre)
 
 GSL_INC = ../third/gsl/include
 $(GSL_INC):
-	(cd ../third; make gsl)
+	(cd ../third; $(MAKE) gsl)
 
 SAMTOOLS_INC = ../third/samtools
 BCF_INC = ../third/samtools/bcftools 
 $(SAMTOOLS_INC) $(BCF_INC):
-	(cd ../third; make samtools)
+	(cd ../third; $(MAKE) samtools)
 
 BZIP2_INC = ../third/bzip2
 $(BZIP2_INC):
-	(cd ../third; make bzip2)
+	(cd ../third; $(MAKE) bzip2)
 
-THIRD_INC = $(addprefix -I,$(TABIX_INC) $(PCRE_INC) $(BCF_INC) $(BZIP2_INC))
+THIRD_INC = $(addprefix -I,$(BCF_INC) $(TABIX_INC) $(PCRE_INC) $(BZIP2_INC) $(GSL_INC))
 
 ### put BCF_INC ahead of TABIX, so correct kseq.h can be included
 DEFAULT_CXXFLAGS = -std=c++0x -D__STDC_LIMIT_MACROS -I. -I.. -I../base $(THIRD_INC) -D_FILE_OFFSET_BITS=64 -D_USE_KNETFILE
@@ -43,13 +43,23 @@ debug: CXXFLAGS = -Wall -ggdb -O0 $(DEFAULT_CXXFLAGS)
 debug: $(LIB_DBG)
 
 $(LIB): $(OBJ) 
-	ar rcs $@ $^
+	$(AR) rcs $@ $^
 $(LIB_DBG): $(OBJ) 
-	ar rcs $@ $^
+	$(AR) rcs $@ $^
 
-%: %.cpp # remove implicit Makefile rule of converting ABC.cpp to ABC
-%.o: %.cpp %.h $(THIRD_INC)
-	g++ -c $(CXXFLAGS) $<
+.SUFFIXES:
+define BUILD_each
+  TAR := $(1).o
+  SRC := $(1).cpp
+  -include  $(1).d
+  $$(TAR): $$(SRC) 
+	$$(CXX) -MMD $$(CXXFLAGS) -c $$< $$(CXXFLAGS)
+endef
+$(foreach s, $(BASE), $(eval $(call BUILD_each, $(s))))
+
+# %: %.cpp # remove implicit Makefile rule of converting ABC.cpp to ABC
+# %.o: %.cpp %.h $(THIRD_INC)
+# 	g++ -c $(CXXFLAGS) $<
 
 clean:
 	rm -rf $(LIB) $(LIB_DBG) *.o *.d
