@@ -1167,7 +1167,7 @@ int main(int argc, char** argv){
     if (model[i]->getModelName() == "MetaCov" ||
         model[i]->getModelName() == "MetaSkew" ||
         model[i]->getModelName() == "MetaKurt") {
-      s += "assoc.gz";
+      s += ".assoc.gz";
       fOuts[i] = new FileWriter(s.c_str(), BGZIP);
       metaFileToIndex.push_back(s);
     } else if (model[i]->getModelName() == "MetaDominant" ||                
