@@ -1,3 +1,7 @@
+2014-03-18  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
+
+	* Fix: MetaCov model now have the correct suffix
+
 2014-02-28  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
 
 	* Change: for dominant/recessive model, automatically generate covariance
